Moved MuleAppArchetype it the integration test folder. Optimized build time just a bit.